# minitensor

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CITATION.cff  Cargo.toml  MANIFEST.in  Makefile  README.md  install.sh  pyproject.toml  setup.py
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: questions.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  coverage.yml  docs.yml  lints.yml  test_macos.yml  test_ubuntu.yml  test_windows.yml  tests.yml
bindings/: Cargo.toml  build.rs
bindings/src/: custom_ops.rs  debug.rs  device.rs  dtype.rs  error.rs  functional.rs  lib.rs  nn.rs  numpy_compat.rs  optim.rs  plugins.rs  serialization.rs  tensor.rs
bindings/src/nn/: layers.rs  module.rs
bindings/src/tensor/: preamble.rs  pytensor_arithmetic.rs  pytensor_comparison.rs  pytensor_concat_split.rs  pytensor_creation_basic.rs  pytensor_properties.rs
bindings/src/tensor/pytensor/: arithmetic.rs  comparison.rs  comparison_dunder.rs  concat_split.rs  grad.rs  isclose.rs  math.rs  numpy.rs  operations.rs  properties.rs  reduction.rs  repr.rs
bindings/src/tensor/pytensor/creation/: basic.rs  like.rs  range.rs
bindings/src/tensor/python/: args.rs  convert.rs  numpy.rs
docs/: api_reference.md  architecture_review.md  conf.py  custom_operations.md  development.md  index.md  installation.md  performance.md  plugin_system.md  requirements.txt
docs/_static/: custom.css
docs/tutorials/: basic_usage.ipynb
engine/: Cargo.toml
engine/examples/: hardware_detection.rs  metal_demo.rs  opencl_demo.rs
engine/src/: custom_ops.rs  debug.rs  device.rs  error.rs  lib.rs  plugins.rs  random.rs  serialization.rs
engine/src/autograd/: function.rs  graph.rs  mod.rs
engine/src/autograd/mod/: activation.rs  arithmetic.rs  core.rs  linalg.rs  reduction.rs  shape.rs  tests.rs
engine/src/autograd/ops/: activation.rs  arithmetic.rs  core.rs  linalg.rs  mod.rs  reduction.rs  shape.rs  tests.rs
engine/src/backends/: cpu.rs  mod.rs
engine/src/backends/cuda/: mod.rs  stream.rs
engine/src/backends/metal/: README.md  integration_test.rs  mod.rs
engine/src/backends/opencl/: README.md  integration_test.rs  mod.rs
engine/src/backends/opencl/mod/: context.rs  kernels.rs
engine/src/custom_ops/: examples.rs
engine/src/hardware/: cpu.rs  gpu.rs  memory.rs  mod.rs  optimizer.rs  profiler.rs
engine/src/memory/: allocator.rs  manager.rs  mod.rs  pool.rs
engine/src/nn/: activation.rs  conv.rs  dense_layer.rs  dropout.rs  init.rs  layer.rs  loss.rs  mod.rs  normalization.rs  sequential.rs  utils.rs
engine/src/operations/: activation.rs  arithmetic.rs  binary.rs  comparison.rs  conv.rs  fusion.rs  linalg.rs  loss.rs  map.rs  minmax.rs  mod.rs  normalization.rs  reduction.rs  selection.rs  shape_ops.rs  simd.rs
engine/src/operations/activation/: advanced.rs  elementwise.rs  hyperbolic.rs  power.rs  softmax.rs  trigonometry.rs
engine/src/operations/arithmetic/: elementwise.rs  kernels.rs
engine/src/operations/linalg/: diagonal.rs  matmul.rs  triangular.rs
engine/src/operations/loss/: classification.rs  regression.rs
engine/src/operations/reduction/: argminmax.rs  boolean.rs  core.rs  logsumexp.rs  minmax_indices.rs  nan_minmax.rs  nanquantile.rs  quantile.rs  sort.rs  sum_prod.rs
engine/src/operations/shape_ops/: indexing.rs  reshape.rs
engine/src/operations/simd/: kernels.rs  utils.rs
engine/src/ops/: activation.rs  arithmetic.rs  attention.rs  comparison.rs  conv.rs  linalg.rs  loss.rs  map.rs  minmax.rs  mod.rs  normalization.rs  reduction.rs  selection.rs  shape_ops.rs  simd.rs  util.rs
engine/src/ops/activation/: advanced.rs  elementwise.rs  hyperbolic.rs  power.rs  softmax.rs  trigonometry.rs
engine/src/ops/arithmetic/: elementwise.rs
engine/src/ops/kernels/: binary.rs  mod.rs
engine/src/ops/linalg/: diagonal.rs  matmul.rs  triangular.rs
engine/src/ops/loss/: classification.rs  regression.rs
engine/src/ops/reduction/: boolean.rs  logsumexp.rs  minmax_indices.rs  nan_minmax.rs  nanquantile.rs  quantile.rs  sort.rs  sum_prod.rs
engine/src/ops/shape_ops/: indexing.rs  reshape.rs
engine/src/ops/simd/: kernels.rs  utils.rs
engine/src/optim/: adam.rs  mod.rs  optimizer.rs  rmsprop.rs  sgd.rs  tests.rs  utils.rs
engine/src/tensor/: data.rs  dtype.rs  mod.rs  shape.rs  storage.rs  tensor.rs
engine/src/tensor/mod/: autograd.rs  core.rs  indexing.rs  ops.rs  utils.rs
engine/tests/: compatibility_tests.rs  flatten.rs  gradient_tests.rs  integration_test.rs  numerical_limits.rs  performance_tests.rs  training_workflow.rs
examples/: bandit_rl.py  basic_training.py  custom_operations_demo.py  digits_cnn.py  example_neural_network.py  iris_classification.py  iris_kmeans.py  linear_regression.py  logistic_regression.py  multiclass_classification.py  performance_benchmark.py  plugin_system_demo.py
examples/notebooks/: 00_tensor_and_functional_api.ipynb  01_nn_optim_autograd.ipynb  (+1 more)
examples/rust_plugin_example/: Cargo.toml  README.md
examples/rust_plugin_example/src/: lib.rs
minitensor/: __init__.py  _api.py  _backend.py  _exports.py  _shape.py  _version.py  functional.py  numpy_compat.py  tensor.py
scripts/: build.py  version.py
tests/: conftest.py  test_activation_ops.py  test_allclose_array_equal.py  test_api_defaults.py  test_api_helpers.py  test_arg.py  test_arithmetic_ops.py  test_batch_norm.py  test_bce_loss.py  test_broadcast_shape_helpers.py  test_broadcasting.py  test_cat_stack.py  test_chunk.py  test_clip_clamp.py  test_comparison_ops.py  test_conv2d.py  test_cross_entropy.py  test_cross_product.py  test_cumulative_ops.py  test_default_dtype_context.py  test_diagonal_trace.py  test_dropout.py  test_dtype_conversion.py  test_expand.py  test_flatten_view.py  test_flip.py  test_gather.py  test_gradcheck_differential.py  test_hyperbolic_ops.py  test_index_select.py  test_indexing.py  test_inverse_trig_ops.py  test_linalg_ops.py  test_manual_seed.py  test_max_min.py  test_median.py  test_movedim_moveaxis.py  test_nan_reductions.py  test_nan_to_num.py  test_narrow.py  (+35 more)
(+22 files in other folders)
