[package]
name = "bindings"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Python bindings for minitensor"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "minitensor"
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../engine" }
pyo3 = { workspace = true }
numpy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = "0.9"
rand_distr = "0.5"

[build-dependencies]
pyo3-build-config = { version = "0.26", features = ["resolve-config"] }
