[package]
name = "engine"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "High-performance tensor operations and automatic differentiation library"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tensor", "deep-learning", "automatic-differentiation", "machine-learning"]
categories = ["science", "mathematics"]

[dependencies]
# Core dependencies
ndarray = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

# Memory management
arc-swap = { workspace = true }
parking_lot = { workspace = true }

# SIMD and performance
rayon = { workspace = true }
wide = { workspace = true }
matrixmultiply = { workspace = true }

# System information
num_cpus = { workspace = true }
libc = { workspace = true }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# BLAS integration (optional for now)
# blas-src = { workspace = true }
# cblas = { workspace = true }
# lapack = { workspace = true }

# GPU backends (optional)
cudarc = { workspace = true, optional = true }
metal = { workspace = true, optional = true }
opencl3 = { workspace = true, optional = true }

# Plugin system (optional)
libloading = { version = "0.8", optional = true }

# Serialization dependencies
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["cpu"]
cpu = []
cuda = ["dep:cudarc"]
metal = ["dep:metal"]
opencl = ["dep:opencl3"]
gpu = ["cuda", "metal", "opencl"]
conv = []
dropout = []
normalization = []
dynamic-loading = ["dep:libloading"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
approx = "0.5"

